--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -8,10 +8,10 @@
       </span>
       
       <% if question.author_name.present? %>
-          <p class="question-answer mt-2 text-gray-700 dark:text-white">
-            Вопрос от: <%= question.author_name %>
-          </p>
-        <% end %>
+        <p class="question-answer mt-2 text-gray-700 dark:text-white">
+          Вопрос от: <%= question.author_name %> <%= link_to question.author_name, user_path(question.author_name) %>
+        </p>
+      <% end %>
 
       <h3 class="question-title text-lg font-semibold text-gray-900 dark:text-white">
         <%= question.text %>
@@ -29,7 +29,36 @@
 
     <%= submit_tag 'Отправить ответ', class: 'btn bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded' %>
 
-     
+  <% end %>
+
+<% elsif question.author_name == current_user.username && current_user.present?%>
+  <%= form_for question do |f| %>
+    <div class="question bg-white rounded-lg shadow dark:border dark:bg-gray-800 dark:border-gray-700 p-4 my-4">
+      <span class="question-date text-gray-500 dark:text-gray-400">
+        Дата: <%= question.created_at %>
+      </span>
+      
+      <% if question.author_name.present? %>
+        <p class="question-answer mt-2 text-gray-700 dark:text-white">
+          Вопрос от: <%= question.author_name %> <%= link_to question.author_name, user_path(question.author_name) %>
+        </p>
+      <% end %>
+
+      <h3 class="question-title text-lg font-semibold text-gray-900 dark:text-white">
+        <%= question.text %>
+      </h3>
+
+      <% if question.answer.present? %>
+        <p class="question-answer mt-2 text-gray-700 dark:text-white">
+          Ответ: <%= question.answer %>
+        </p>
+      <% end %>
+    </div>
+    <div class="form-field mb-4 ">
+      <%= f.text_area :text, class: 'form-textarea bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-1/2 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500' %>
+    </div>
+
+    <%= submit_tag 'Изменить вопрос', class: 'btn bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded' %>
 
   <% end %>
 
@@ -41,7 +70,7 @@
     
     <% if question.author_name.present? %>
         <p class="question-answer mt-2 text-gray-700 dark:text-white">
-          Вопрос от: <%= question.author_name %>
+          Вопрос от: <%= question.author_name %> <%= link_to question.author_name, user_path(question.author_name) %>
         </p>
       <% end %>
 
