--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,7 +17,7 @@
 
     <div class="questions mt-8">
       <div class="form question-form">
-        <% if @user.id != current_user.id%>
+        <% if @user&.id != current_user&.id%>
         <%= form_for @new_question do |f| %>
             
             <% if current_user %>
