improved the question models

--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -19,7 +19,7 @@
 
       <% if question.answer.present? %>
         <p class="question-answer mt-2 text-gray-700 dark:text-white">
-          Ответ: <%= question.answer %>
+          <%= question.answer %>
         </p>
       <% end %>
     </div>
@@ -50,7 +50,7 @@
 
       <% if question.answer.present? %>
         <p class="question-answer mt-2 text-gray-700 dark:text-white">
-          Ответ: <%= question.answer %>
+          <%= question.answer %>
         </p>
       <% end %>
     </div>
@@ -80,7 +80,7 @@
 
     <% if question.answer.present? %>
       <p class="question-answer mt-2 text-gray-700 dark:text-white">
-        Ответ: <%= question.answer %>
+        <%= question.answer %>
       </p>
     <% end %>
   </div>
