--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -1,87 +1,42 @@
 
 
-<% if current_user == @user %>
-  <%= form_for question do |f| %>
-    <div class="question bg-white rounded-lg shadow dark:border dark:bg-gray-800 dark:border-gray-700 p-4 my-4">
-      <span class="question-date text-gray-500 dark:text-gray-400">
-        Дата: <%= question.created_at %>
-      </span>
-      
-      <% if question.author_name.present? %>
-        <p class="question-answer mt-2 text-gray-700 dark:text-white">
-          Вопрос от: <%= question.author_name unless question.author_id.present? %> <%= link_to question.author_name, user_path(question.author_id) if question.author_id.present?%>
-        </p>
-      <% end %>
+<div>
+  <div class="question bg-white rounded-lg shadow dark:border dark:bg-gray-800 dark:border-gray-700 p-4 my-4">
+  <span class="question-date text-gray-500 dark:text-gray-400">
+    Дата: <%= question.created_at %>
+  </span>
+  
+  <% if question.author_name.present? %>
+    <p class="question-answer mt-2 text-gray-700 dark:text-white">
+      Вопрос от: <%= question.author_name unless question.author_id.present? %> <%= link_to question.author_name, user_path(question.author_id) if question.author_id.present?%>
+    </p>
+  <% end %>
 
-      <h3 class="question-title text-lg font-semibold text-gray-900 dark:text-white">
-        <%= question.text %>
-      </h3>
+  <h3 class="question-title text-lg font-semibold text-gray-900 dark:text-white">
+    <%= question.text %>
+  </h3>
 
-      <% if question.answer.present? %>
-        <p class="question-answer mt-2 text-gray-700 dark:text-white">
-          <%= question.answer %>
-        </p>
-      <% end %>
-    </div>
-    <div class="form-field mb-4 ">
+  <% if question.answer.present? %>
+    <p class="question-answer mt-2 text-gray-700 dark:text-white">
+      <%= question.answer %>
+    </p>
+  <% end %>
+</div>
+<%= form_for question do |f| %>
+  <% if current_user == @user %>
+    <div>
+      <div class="form-field mb-4 ">
       <%= f.text_area :answer, class: 'form-textarea bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-1/2 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500' %>
     </div>
-
     <%= submit_tag 'Отправить ответ', class: 'btn bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded' %>
 
-  <% end %>
-
-<% elsif question.author_name == current_user&.username && current_user.present?%>
-  <%= form_for question do |f| %>
-    <div class="question bg-white rounded-lg shadow dark:border dark:bg-gray-800 dark:border-gray-700 p-4 my-4">
-      <span class="question-date text-gray-500 dark:text-gray-400">
-        Дата: <%= question.created_at %>
-      </span>
-      
-      <% if question.author_name.present? %>
-        <p class="question-answer mt-2 text-gray-700 dark:text-white">
-          Вопрос от: <%= question.author_name unless question.author_id.present? %> <%= link_to question.author_name, user_path(question.author_id) if question.author_id.present?%>
-        </p>
-      <% end %>
-
-      <h3 class="question-title text-lg font-semibold text-gray-900 dark:text-white">
-        <%= question.text %>
-      </h3>
-
-      <% if question.answer.present? %>
-        <p class="question-answer mt-2 text-gray-700 dark:text-white">
-          <%= question.answer %>
-        </p>
-      <% end %>
-    </div>
-    <div class="form-field mb-4 ">
+  <% elsif question.author_name == current_user&.username && current_user.present? %>
+    <div>
+      <div class="form-field mb-4 ">
       <%= f.text_area :text, class: 'form-textarea bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-1/2 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500' %>
     </div>
-
     <%= submit_tag 'Изменить вопрос', class: 'btn bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded' %>
-
   <% end %>
-
-<% else %>
-  <div class="question bg-white rounded-lg shadow dark:border dark:bg-gray-800 dark:border-gray-700 p-4 my-4">
-    <span class="question-date text-gray-500 dark:text-gray-400">
-      Дата: <%= question.created_at %>
-    </span>
-    
-    <% if question.author_name.present? %>
-        <p class="question-answer mt-2 text-gray-700 dark:text-white">
-          Вопрос от: <%= question.author_name unless question.author_id.present? %> <%= link_to question.author_name, user_path(question.author_id) if question.author_id.present?%>
-        </p>
-      <% end %>
-
-    <h3 class="question-title text-lg font-semibold text-gray-900 dark:text-white">
-      <%= question.text %>
-    </h3>
-
-    <% if question.answer.present? %>
-      <p class="question-answer mt-2 text-gray-700 dark:text-white">
-        <%= question.answer %>
-      </p>
-    <% end %>
-  </div>
 <% end %>
+
+
