--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,46 +11,29 @@
     <%= link_to 'Редактировать профиль', edit_user_path(@user),
         class: 'bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 
                 border-b-4 border-blue-700 hover:border-blue-500 rounded mt-4 
-                block max-w-xs mx-auto text-center' if current_user == @user %>
+                block max-w-xs mx-auto text-center' %>
   </div>
 </div>
 
     <div class="questions mt-8">
       <div class="form question-form">
-        <% if @user&.id != current_user&.id%>
         <%= form_for @new_question do |f| %>
           <%= f.hidden_field :user_id %>
-            
-            <% if current_user %>
-              
-              <%= f.hidden_field :author_name, value: current_user.username %>
-              <%= f.hidden_field :author_id, value: current_user.id %>
-
-            <% else %>
               <div class="form-field mb-4">
-              
                 <%= f.label "Ваше имя", class: 'block text-lg font-medium text-gray-900 dark:text-white' %>
                 <%= f.text_area :author_name, class: 'form-textarea bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-1/2 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500' %>
               </div>
-            <% end %>
-            
-
             <div class="form-field mb-4">
               <%= f.label "Текст вопроса", class: 'block text-lg font-medium text-gray-900 dark:text-white' %>
               <%= f.text_area :text, class: 'form-textarea bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-1/2 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500' %>
             </div>
-
             <%= submit_tag 'Задать вопрос', class: 'btn bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded' %>
-
           <% end %>
 
-        <% end %>
           
       </div>
       <div class="questions-wrap mt-8">
         <h2 class="text-lg font-semibold text-gray-900 dark:text-white">Количество: <%= @user.questions.size %> <%= declination_by_numbers(@user.questions.size, "Вопрос", "Вопроса", "Вопросов") %> </h2>
-
-        
         <% @user.questions.each do |question| %>
           <%= render partial: 'questions/question', object: question %>
         <% end %>
