--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,17 +15,17 @@
                   <img src="https://flowbite.com/docs/images/logo.svg" class="mr-3 h-6 sm:h-9" alt="Flowbite Logo" />
                   <%= link_to 'Главная', root_path, class: 'self-center text-xl font-semibold whitespace-nowrap dark:text-white' %>
               </a>
-              <% if current_user %>
-                <div class="flex items-center lg:order-2">
-                  <%= link_to 'Профиль', user_path(current_user), class: 'text-gray-800 dark:text-white hover:bg-gray-50 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 dark:hover:bg-gray-700 focus:outline-none dark:focus:ring-gray-800' %>                 
-                  <%= link_to 'Выйти', log_out_path, class: 'text-gray-800 dark:text-white hover:bg-gray-50 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 dark:hover:bg-gray-700 focus:outline-none dark:focus:ring-gray-800' %>
-                </div>
-              <% else %>
+              <%# if current_user %>
+                <%# <div class="flex items-center lg:order-2"> %>
+                  <%# <%= link_to 'Профиль', user_path(current_user), class: 'text-gray-800 dark:text-white hover:bg-gray-50 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 dark:hover:bg-gray-700 focus:outline-none dark:focus:ring-gray-800' %>                  
+                  <%# <%= link_to 'Выйти', log_out_path, class: 'text-gray-800 dark:text-white hover:bg-gray-50 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 dark:hover:bg-gray-700 focus:outline-none dark:focus:ring-gray-800' %> 
+                <%# </div> %>
+              <%# else %>
                 <div class="flex items-center lg:order-2">
                   <%= link_to 'Зарегестрироваться', sign_up_path, class: 'text-gray-800 dark:text-white hover:bg-gray-50 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 dark:hover:bg-gray-700 focus:outline-none dark:focus:ring-gray-800' %>                 
                   <%= link_to 'Войти', log_in_path, class: 'text-gray-800 dark:text-white hover:bg-gray-50 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 dark:hover:bg-gray-700 focus:outline-none dark:focus:ring-gray-800' %>
                 </div>
-              <% end %>
+              <%# end %>
 
           </div>
       </nav>
